Bug 463362 - Theme Selection Dialog too large on HiDPI screens
Summary: Theme Selection Dialog too large on HiDPI screens
Status: CLOSED FIXED
Alias: None
Product: ghostwriter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: megan.conkle
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-22 21:31 UTC by megan.conkle
Modified: 2023-04-23 00:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description megan.conkle 2022-12-22 21:31:36 UTC
The preview thumbnails of the themes in the theme selection dialog need to have the math adjusted to account for HiDPI screens.
Comment 1 Fushan Wen 2022-12-23 16:03:45 UTC
How to open the theme selection dialog?
Comment 2 megan.conkle 2022-12-31 18:45:57 UTC
(In reply to Fushan Wen from comment #1)
> How to open the theme selection dialog?

From the menu bar, click on "Settings" -> "Themes...".
Comment 3 megan.conkle 2023-02-11 22:54:38 UTC
Git commit 98937b5c7863938c486b3194ac54ac56bc5e5de3 by Megan Conkle.
Committed on 11/02/2023 at 22:40.
Pushed by wereturtle into branch 'master'.

Fix theme preview thumbnail sizes on HiDPI screens.

The theme preview thumbnails in the theme selection dialog were
twice the size they should have been when shown on HiDPI displays.
Remove the device pixel ratio multiplication against the desired
icon size when setting the list/grid widget's sizes, as these
are automatically calculated by the widget.

M  +1    -0    CHANGELOG.md
M  +1    -1    src/colorschemepreviewer.cpp
M  +3    -8    src/themeselectiondialog.cpp

https://invent.kde.org/office/ghostwriter/commit/98937b5c7863938c486b3194ac54ac56bc5e5de3