Fix theme preview thumbnail sizes on HiDPI screens.

The theme preview thumbnails in the theme selection dialog were
twice the size they should have been when shown on HiDPI displays.
Remove the device pixel ratio multiplication against the desired
icon size when setting the list/grid widget's sizes, as these
are automatically calculated by the widget.
BUG: 463362